# soundboard-pipewire

./: .gitignore  CMakeLists.txt  README.md
include/: soundboard.hpp  virtualdevices.hpp
src/: CMakeLists.txt  main.cpp  soundboard.cpp  virtualdevices.cpp
src/cli/: CMakeLists.txt  main.cpp  soundboard-cli
src/daemon/: CMakeLists.txt  main.cpp  socketserver.cpp  soundboard.cpp  virtualdevices.cpp
